# vtk-io-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  run.sh  test.sh
.github/workflows/: main.yml
data/: icosahedron-appended.vtu  icosahedron-ascii.vtu  icosahedron-binary.vtu  icosahedron-zlib.vtu
src/: base64.rs  main.rs  utils.rs  vtk.rs
